# mado

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.claude/agents/: product-owner.md
.planning/: CHAT_UI_DESIGN.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  SWARM-EXECUTION.md  SWARM-PHASE-7.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md
.planning/phases/02-terminal/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md
.planning/phases/03-claude-integration/: 03-01-PLAN.md  03-02-PLAN.md
.planning/phases/04-versioning/: 04-01-PLAN.md  04-02-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/kobo-core/: Cargo.toml
crates/kobo-core/src/: client.rs  protocol.rs  types.rs
crates/kobo-daemon/: Cargo.toml
crates/kobo-daemon/src/: claude_history.rs  conversation.rs  git_ops.rs  keystore.rs  lib.rs  lifecycle.rs  main.rs  process.rs  server.rs  session.rs  state.rs
crates/kobo-daemon/tests/: health_check.rs  lifecycle.rs
crates/mado-core/: Cargo.toml
crates/mado-core/src/: client.rs  lib.rs  protocol.rs  types.rs
crates/mado-daemon/: Cargo.toml
crates/mado-daemon/src/: claude_history.rs  config.rs  conversation.rs  git_ops.rs  keystore.rs  lib.rs  lifecycle.rs  main.rs  pid.rs  process.rs  server.rs  session.rs  state.rs
crates/mado-daemon/tests/: health_check.rs  lifecycle.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge.rs  commands.rs  lib.rs  lifecycle.rs  main.rs
src/components/: ApiKeySetup.tsx  ChangeDetails.tsx  ChatInput.tsx  ChatView.tsx  CommandPalette.tsx  ContextualHints.tsx  GitView.tsx  GridResizePopup.tsx  Layout.tsx  LayoutModal.tsx  MarkdownContent.tsx  MessageBubble.tsx  ModelPicker.tsx  Pane.tsx  PaneModelPicker.tsx  PaneWelcome.tsx  SessionSidebar.tsx  Settings.tsx  StatusBar.tsx  StreamingText.tsx  Terminal.tsx  Timeline.tsx  Toolbar.tsx  Tooltip.tsx
src/components/git/: CommitHistory.tsx  CommitModal.tsx  CommitPanel.tsx  DiffFullscreen.tsx  DiffViewer.tsx  FileList.tsx
src/components/ui/: TruncatedText.tsx  confirm-dialog.tsx
src/hooks/: useChangeIndicator.ts  useGridLayout.ts  useKeyboard.ts  useMenuEvents.ts  useResizableSidebar.ts  useTerminal.ts  useVersioning.ts
src/lib/: diff-parser.ts  ipc.ts  models.ts  session-names.ts  terminal.ts
src/stores/: conversations.ts  panes.test.ts  panes.ts  sessions.test.ts  sessions.ts  ui.ts
