[package]
name = "mado-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kobo desktop app - Tauri shell connecting to mado-daemon"

[lib]
name = "mado_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mado-core = { path = "../crates/mado-core" }
mado-daemon = { path = "../crates/mado-daemon" }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
http-body-util = "0.1"
dirs = "5"
