[package]
name = "mado-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, IPC protocol, and client library for Kobo"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
dirs = "6"
libc = "0.2"
base64 = "0.22"
