[package]
name = "mado-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Background daemon for Mado - manages Claude CLI sessions"

[[bin]]
name = "mado-daemon"
path = "src/main.rs"

[dependencies]
mado-core = { path = "../mado-core" }
axum = { version = "0.8", features = ["json"] }
tokio = { workspace = true }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tower = { version = "0.5", features = ["util"] }
thiserror = { workspace = true }
libc = "0.2"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
keyring = "3.6.3"
git2 = "0.20.4"

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
mado-core = { path = "../mado-core" }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
